# church-slide

./: .env  .gitignore  README copy.md  README-2 copy.md  README-2.md  README.md  components.json  db.sqlite  graphql.config.yml  package-lock.json  package.json  tailwind.config.js  todo.md  tsconfig.json
app/: Reveal.tsx  globals.css  layout.tsx  page.tsx
app/(main)/(with-layout)/: layout.tsx
app/(main)/(with-layout)/admin/form/ui/manefo/: page.tsx
app/(main)/(with-layout)/admin/list/: main.tsx  page.tsx
app/(main)/(with-layout)/admin/list/data/: apps.tsx
app/(main)/(with-layout)/admin/lithurgy/: page.tsx
app/(main)/(with-layout)/admin/lithurgy/[id]/: page.tsx
app/(main)/(with-layout)/admin/lithurgy/data/: data.tsx
app/(main)/(with-layout)/admin/lithurgy/grid/: grid.tsx  item-grid.tsx  page.tsx  sortable-item.tsx
app/(main)/(with-layout)/admin/lithurgy/other/: page.tsx
app/(main)/(with-layout)/admin/lithurgy/preview/: page.tsx
app/(main)/(with-layout)/admin/nl/: page.tsx
app/(main)/(with-layout)/admin/song/: page.tsx
app/(main)/(with-layout)/admin/song-category/: cell-action.tsx  data.tsx  page.tsx  pagestsx
app/(main)/(with-layout)/admin/song/[id]/: page.tsx
app/(main)/(wrapper)/slide/client/: page.tsx
components/: Presentation.tsx
components/features/: board-column.tsx  column-action.tsx  kanban-view-page.tsx  new-section-dialog.tsx  new-task-dialog.tsx  task-card.tsx
components/hooks/: useCategories.tsx  useTypes.tsx
components/new-features/: song.tsx  transition-page.tsx  verse.tsx
components/service/graphql/: GraphQL-template.tsx  GraphQL.tsx  uti.tsx
components/service/graphql/song/: author-service.ts  song-service.ts
components/service/graphql/song-category/: song-category-service.ts  types-service.ts
components/slide/: image-holder.tsx  song.tsx
components/slide/common/: new-song-category-dialog.tsx  slide-preview.tsx
components/slide/hook/: useCategories.tsx
database/: ANTEMA.sql  FF.sql  FFPM.sql  SALAMO.sql
lib/: apolloClient.tsx
public/ressources/hira/: 01_fihirana_ffpm.json  02_fihirana_fanampiny.json  03_antema.json  04_hira_salamo.json  text.txt
public/ressources/litorjia/: litorjia.json  template.json
src/: App.css  App.tsx  Font.css  Reveal copy.tsx  Reveal.initialize({  Reveal.tsx  Untitled-1.txt  back.up.txt  function Sections() {.ts  index.css  main.tsx
src-tauri/: 5646  Cargo.toml  db.sqlite  db.sqlite3  example.db  tauri.conf.json
src-tauri-2/: tauri.conf copy 2.json  tauri.conf copy.json
src-tauri-2/src/: main.rs
src-tauri/controller/: Cargo.toml
src-tauri/controller/src/: lib.rs  types.rs
src-tauri/dto/: Cargo.toml
src-tauri/dto/src/: category.rs  types.rs
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: article.rs  author.rs  category.rs  comment.rs  lib.rs  mcd  s  song.rs  types.rs  verses.rs
src-tauri/graphql/: Cargo.toml
src-tauri/graphql/src/: book.rs  mixer.rs  schema.rs
src-tauri/graphql/src/schemas/: author_ql.rs  category_ql.rs  mod.rs  s  song_ql.rs  types_ql.rs  verses_ql.rs
src-tauri/migration/src/: lib.rs  m20241021_080046_create_post_table.rs  m20241021_080046_create_table_migration.rs  m20241021_130926_alter_table_migration.rs  m20241021_insert_table.rs  s
src-tauri/repository/: Cargo.toml
src-tauri/repository/src/: category.rs  dbconnection.rs  lib.rs  types.rs
src-tauri/service/: Cargo.toml
src-tauri/service/src/: category.rs  lib.rs  types.rs
src-tauri/src/: graphql.rs  main.rs  mod.rs
src/components/: Affiche.tsx  Andininy.tsx  CardComponent.tsx  Dashboard.tsx  Hira.tsx  Home.tsx  Layout.tsx  MyAppBar.tsx  MyToolbar.tsx  OriginalPage.tsx  Page.tsx  SearchableDashboard.tsx  Sidebar.css  Sidebar.tsx  SmoothCard.tsx  TablesPage.tsx  TransitionPage.tsx  breadcrumbs.tsx  file-uploader.tsx  mode-toggle.tsx  nav-main.tsx  nav-projects.tsx  nav-user.tsx  search-input.tsx  team-switcher.tsx
src/components/base/: DemoPageContent.tsx  Poster.tsx  Slide.tsx  SlideForm.tsx  Song.tsx  TransitionPage.tsx  Untitled-1.ts  Verses.tsx
src/components/kbar/: index.tsx
src/components/layout/: app-sidebar.tsx  header.tsx  page-container.tsx  user-nav.tsx
src/components/layout/ThemeToggle/: theme-toggle.tsx
src/components/ui/: sidebar.tsx
src/constants/: data.ts
src/hooks/: use-breakpoints.tsx  use-callback-ref.tsx  use-controllable-state.tsx
src/interface/: column.tsx  interface.tsx
src/lib/: utils.ts
src/models/: TypeSong.ts  model.ts
src/pages/: DashboardPage.tsx  FormPage.tsx  OtherPage.tsx
src/pages/category-song/: CategorySongEdit.tsx  CategorySongForm.tsx  CategorySongItem.tsx  CategorySongList.tsx  UModel.tsx  Untitled-2.rs  Untitled-3.ts  form-examples.tsx
src/pages/category-song/form/: bac.txt
src/pages/types/: TypesDetails.tsx  TypesForm.tsx  TypesItem.tsx  TypesList.tsx
src/pages/types copy/: TypesList.tsx
src/pages/types/form/: TypesDetails.tsx  TypesForm.tsx  TypesItem.tsx  TypesList.tsx
