[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "controller"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["shell-open"] }
service = { path = "../service" }
entity = { path = "../entity" }

[dependencies.sea-orm]
version = "1.0.1"
features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ]
default-features = false


[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]