[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-graphql = "5.0"
async-graphql-tide = "5.0"
futures-util = "0.3"

[dependencies.sea-orm]
version = "1.0.1"
features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ]
default-features = false


