[package]
name = "repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[lib]
name = "repository"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
tauri = { version = "1.8.1", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.29.0", features = ["full"] }
anyhow = "1.0.71"
dotenvy = "0.15.7"

[dependencies.sea-orm]
version = "1.0.1"
features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ]
default-features = false


[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]